Closed Bug 1076719 Opened 10 years ago Closed 10 years ago

Fragmented MP4 playback stops too early

Categories

(Core :: Audio/Video, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: jya, Assigned: jya)

References

Details

Attachments

(1 file, 1 obsolete file)

Here is a small example exhibiting the problem: http://people.mozilla.org/~jyavenard/tests/mse_mp4/bruce.mp4 it is made of various fragmented mp4 concatenated together. The MP4Reader will stop at the first fragment and set EOF. In this video, the first fragment is 10s long while the complete video is 2 minutes long. Video playback stops after 10s. Video was created using the following command: mp4box -dash 10000 -rap -segment-name bruce -subsegs-per-sidx 5 bruce_vs_ironman.mp4
This one makes it easier to debug. It's made of 1s fragment rather than 10s. Issue is the same as above, except that only 1s of video is played http://people.mozilla.org/~jyavenard/mediatest/bruce1s-fragmented.mp4
a new media segment may start with an optional segment type box (styp). If so, skip it
Attachment #8498785 - Flags: review?(ajones)
Assignee: nobody → jyavenard
Status: NEW → ASSIGNED
Simplify comment
Attachment #8498790 - Flags: review?(ajones)
Attachment #8498785 - Attachment is obsolete: true
Attachment #8498785 - Flags: review?(ajones)
Comment on attachment 8498790 [details] [diff] [review] Skip styp box at beginning of new fragment Review of attachment 8498790 [details] [diff] [review]: ----------------------------------------------------------------- Fantastic!
Attachment #8498790 - Flags: review?(ajones) → review+
Blocks: 1077264
(In reply to Jean-Yves Avenard [:jya] from comment #5) > https://treeherder.mozilla.org/ui/#/jobs?repo=try&revision=c6e0c0ef5e95 Windows bustage?
Keywords: checkin-needed
Also, please take a look at the link below for some useful recommendations for using Try. Might save you some mass-canceling and wasted infra resources :) https://wiki.mozilla.org/Sheriffing/How:To:Recommended_Try_Practices
The windows hostage was due to another stray commit which has nothing to do with this one. And unfortunately, I couldn't push to try most of yesterday. Kept getting locking error.
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: