Bug 1076719 - Skip styp box at beginning of new fragment. r=kentuckyfriedtakahe